--- a/PionReconstruction/Train.ipynb
+++ b/PionReconstruction/Train.ipynb
@@ -352,7 +352,7 @@
     "                  epochs=100,\n",
     "                  batch_size=20,\n",
     "                  validation_split=0.2,\n",
-    "                  verbose=1)"
+    "                  verbose=1) ## can put generators in for x and y"
    ]
   },
   {
