log normalized training

--- a/PionReconstruction/test.ipynb
+++ b/PionReconstruction/test.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "280c83d0-8579-4df4-bb2e-ec895d8afcae",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "%load_ext autoreload\n",
@@ -23,24 +14,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "38fed61e-1562-495b-b179-ca5985c4e358",
+   "execution_count": 3,
+   "id": "69c871e0-75fa-4ac2-ac31-252568e255b2",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import hls4ml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "9e57e929-ece7-43cc-b380-a9d234d2358b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config = hls4ml.utils.fetch_example_model('garnet_1layer.json')\n",
     "\n",
-    "import numpy as np\n",
-    "import awkward as ak\n",
-    "import matplotlib.pyplot as plt\n",
-    "from matplotlib.colors import LogNorm\n",
-    "import uproot as ur\n",
-    "from util.Plotting import *\n",
-    "#from util.Generators import *\n"
+    "# You can print the configuration to see some default parameters\n",
+    "print(config)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "09363068-8487-4c18-bd13-de80ff0ff3b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert it to a hls project\n",
+    "hls_model = hls4ml.converters.keras_to_hls(config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "7342e022-22b0-4bf8-ad50-3667cf7a69e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing HLS project\n",
+      "Done\n"
+     ]
+    },
+    {
+     "ename": "Exception",
+     "evalue": "Vivado HLS installation not found. Make sure \"vivado_hls\" is on PATH.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [6]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mhls_model\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbuild\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/hls4ml/model/graph.py:854\u001b[0m, in \u001b[0;36mModelGraph.build\u001b[0;34m(self, **kwargs)\u001b[0m\n\u001b[1;32m    850\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mexists(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconfig\u001b[38;5;241m.\u001b[39mget_output_dir()):\n\u001b[1;32m    851\u001b[0m     \u001b[38;5;66;03m# Assume the project wasn't written before\u001b[39;00m\n\u001b[1;32m    852\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mwrite()\n\u001b[0;32m--> 854\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconfig\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbackend\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbuild\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/hls4ml/backends/vivado/vivado_backend.py:195\u001b[0m, in \u001b[0;36mVivadoBackend.build\u001b[0;34m(self, model, reset, csim, synth, cosim, validation, export, vsynth, fifo_opt)\u001b[0m\n\u001b[1;32m    193\u001b[0m     found \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39msystem(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcommand -v vivado_hls > /dev/null\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m    194\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m found \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m--> 195\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mVivado HLS installation not found. Make sure \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvivado_hls\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m is on PATH.\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m    197\u001b[0m curr_dir \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mgetcwd()\n\u001b[1;32m    198\u001b[0m os\u001b[38;5;241m.\u001b[39mchdir(model\u001b[38;5;241m.\u001b[39mconfig\u001b[38;5;241m.\u001b[39mget_output_dir())\n",
+      "\u001b[0;31mException\u001b[0m: Vivado HLS installation not found. Make sure \"vivado_hls\" is on PATH."
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "hls_model.build()\n",
+    "\n",
+    "\n",
+    "#hls4ml.utils.fetch_example_list()\n",
+    "\n",
+    "#how should I install vivado?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "2cfee9bf-4004-4f4e-9b6a-f402540c4231",
    "metadata": {},
    "outputs": [],
@@ -72,16 +118,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "b8a7d1b8-2d1a-4f77-a4a1-50f72d66d44d",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import uproot as ur\n",
     "\n",
     "with ur.open(data_path + 'pi0/user.angerami.24559740.OutputStream._000232.root') as file:\n",
     "    pi0_data = file['EventTree'].arrays(library='ak')\n",
     "with ur.open(data_path + 'pipm/user.angerami.24559744.OutputStream._000232.root') as file:\n",
     "    pipm_data = file['EventTree'].arrays(library='ak')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "45e59386-00dd-464f-9586-45ca87cd0820",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cluster_ENG_CALIB_TOT: 0.0 - 1943.4852\n",
+      "cluster_E: 5.0899984e-05 - 1978.5361\n",
+      "cluster_cell_E: 0.005000187084078789 - 1551.0838623046875\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import awkward as ak\n",
+    "\n",
+    "for val in ['cluster_ENG_CALIB_TOT', 'cluster_E', 'cluster_cell_E']:\n",
+    "    print(val + ': ' + str(np.min(ak.flatten(pipm_data[val]))) + ' - ' + str(np.max(ak.flatten(pipm_data[val]))))\n"
    ]
   },
   {
@@ -301,14 +372,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d3a27f1-735b-40ca-9419-914c47c8b241",
+   "id": "4e364eda-35f8-46b9-922c-e9e1028b676b",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# next steps:\n",
-    "# standard scalar (zscore or divide by maximum)\n",
-    "# plot standard deviations on regresssion response"
-   ]
+   "source": []
   }
  ],
  "metadata": {
